[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main/Editor/WorldViewer/Shaders/NegativeShader.tres" type="Material" id=1]
[ext_resource path="res://Main/Editor/WorldViewer/WorldFrame.gd" type="Script" id=2]

[node name="WorldFrame" type="ViewportContainer"]
material = ExtResource( 1 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource( 2 )

[node name="b" type="Viewport" parent="."]
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3
gui_disable_input = true

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="SelectionLeft" type="ColorRect" parent="."]
visible = false
anchor_right = 0.02
anchor_bottom = 1.0

[node name="SelectionRight" type="ColorRect" parent="."]
visible = false
anchor_left = 0.98
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Probability" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0.95"
